--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-<h1>GitHub pages test</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Roberto Lira</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/a663cfdcf4.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg py-0">
+      <div class="container-fluid navcolor">
+        <a class="navbar-brand" style="color: white" href="#"
+          ><strong>Roberto Lira Leon</strong>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="row grid">
+      <div class="col-12 col-md-5">
+        <img src="./assets/imgs/Roberto.png" alt="" />
+      </div>
+      <div class="col-12 col-md-5">
+        <h2>
+          Desarrollador Fullstack con experiencia en el desarrollo de
+          aplicaciones web. Me especializo en JavaScript, Node.js y bases de
+          datos SQL. Hablo inglés nivel B2 y siempre estoy buscando nuevas
+          oportunidades para aprender y crecer en mi carrera.
+        </h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <i class="fas fa-clipboard fa-3x my-3"></i>
+        <h3 class="my-3 fw-bold">Datos personales</h3>
+        <p class="my-3">
+          <strong>Nombre:</strong> Roberto Andrés Lira León <br />
+          <strong>Fecha de nacimiento:</strong> 27 de septiembre de 2001 <br />
+          <strong>Lugar de nacimiento:</strong> Santiago, Chile <br />
+          <strong>Correo electrónico:</strong> rliraleon@gmail.com <br />
+          <strong>Whatsapp:</strong> +529 4888 5418
+        </p>
+      </div>
+      <div class="col-12 col-md-4">
+        <i class="fas fa-graduation-cap fa-3x my-3"></i>
+        <h3 class="my-3 fw-bold">Educación</h3>
+        <p class="my-3">
+          Tomé el curso de Desarrollo Web Fullstack en la academia Desafio
+          LATAM, donde aprendí desarrollo web usando HTML, CSS JavaScript
+          Node.js y Bases de datos SQL
+        </p>
+      </div>
+      <div class="col-12 col-md-4">
+        <i class="far fas fa-language fa-3x my-3"></i>
+        <h3 class="my-3 fw-bold">Bilingüe</h3>
+        <p class="my-3">
+          Aprendí inglés de manera autodidacta en mi adolecencia y antes de
+          cumplir 17 años ya podía comunicarme con nativos sin problemas.
+        </p>
+      </div>
+    </div>
+
+    <!-- Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
