--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <h2>
           Desarrollador Fullstack con experiencia en el desarrollo de
           aplicaciones web. Me especializo en JavaScript, Node.js y bases de
-          datos SQL. Hablo inglés nivel B2 y siempre estoy buscando nuevas
-          oportunidades para aprender y crecer en mi carrera.
+          datos SQL (Propenso a cambio). Hablo inglés nivel B2 y siempre estoy
+          buscando nuevas oportunidades para aprender y crecer en mi carrera.
         </h2>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="display: flex; margin-left: 1rem">
       <div class="col-12 col-md-4">
         <i class="fas fa-clipboard fa-3x my-3"></i>
         <h3 class="my-3 fw-bold">Datos personales</h3>
@@ -85,6 +85,75 @@
           Aprendí inglés de manera autodidacta en mi adolecencia y antes de
           cumplir 17 años ya podía comunicarme con nativos sin problemas.
         </p>
+      </div>
+    </div>
+    <h1 class="centered">Proyectos</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 col-md col-lg-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./assets/imgs/Curriculum.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title roboto-light">Primera versión mi CV</h5>
+              <p class="card-text roboto-light gris">
+                El primer trabajo que hice. Solo tenía conocimiento báico de
+                HTML
+              </p>
+              <a href="./redirects/Curriculum CV/" target="_blank"
+                ><button type="button" class="btn btn-primary">
+                  Visitar
+                </button></a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md col-lg-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./assets/imgs/tienda-vr.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title roboto-light">Tienda de VR</h5>
+              <p class="card-text roboto-light gris">
+                Una página donde aplico lo más báico de CSS
+              </p>
+              <a href="./redirects/Landing page/" target="_blank"
+                ><button type="button" class="btn btn-primary">
+                  Visitar
+                </button></a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md col-lg-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./assets/imgs/Cuppon.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title roboto-light">
+                Página principal de una tienda
+              </h5>
+              <p class="card-text roboto-light gris">
+                Aquí empecé a aplicar técnicas más complejas con la ayuda del
+                framework Bootstrap
+              </p>
+              <a href="./redirects/Cuppon/" target="_blank"
+                ><button type="button" class="btn btn-primary">
+                  Visitar
+                </button></a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
